# ddo-weapon-comparator

./: LICENSE  README.md  gui.py  setup.cfg  setup.py  weapon_comparator.py
src/ddoweapons/: gui.py
