[metadata]
name = DDO-Weapon-Comparator
version = 0.1.0
description = A simple tool to compare weapons in DDO
license = MIT

[options]
packages = ddoweapons

package-dir =
    = src

install_requires =
    matplotlib
    pyqt5

python_requires = >=3.8.0

[options.entry_points]
console_scripts =
    ddoweapons=ddoweapons.gui:main
